# RapidComm

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  RapidCommDesktop.sh  build.sh  config.env  quick-start.sh  temp_change.txt  temp_change2.txt  temp_change3.txt  temp_change4.txt  temp_change5.txt  temp_change6.txt  temp_change7.txt  test-paths.sh
rapid-comm-desktop/: package.json  vite.config.js
rapid-comm-desktop/src/: index.html  main.js  styles.css
rapid-comm-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rapid-comm-desktop/src-tauri/Resources/interface/: index.html
rapid-comm-desktop/src-tauri/Resources/interface/interface/: nothingToExplore.html
rapid-comm-desktop/src-tauri/capabilities/: default.json
rapid-comm-desktop/src-tauri/icons/: icon.icns
rapid-comm-desktop/src-tauri/src/: main.rs
src/interface/: index.html  nothingToExplore.html
src/interface/js/: animations.js  app.js  config.js  ui.js  upload.js  utils.js  void-app.js  void-effects.js  void-interactions.js
src/interface/styles/: common.css  upload.css  void.css
src/services/: main.cpp
src/services/config/: ConfigManager.cpp  ConfigManager.hpp
src/services/ftp/: FtpHandler.cpp  FtpHandler.hpp  FtpService.cpp  FtpService.hpp
src/services/http/: BasePath.hpp  HttpHandler.cpp  HttpHandler.hpp  HttpService.cpp  HttpService.hpp
src/services/server/: ServerManager.cpp  ServerManager.hpp
src/services/socket/: Socket.cpp  Socket.hpp
src/services/storage/: StorageService.cpp  StorageService.hpp
